# stock-classification-new

./: .gitignore  README.md  notebook_template.md  notebook_template_simple.md  pyproject.toml  requirements.txt  requirements_forecasting.txt  session_store.db  stats.json
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_Ml_pre_processing.yml  parameters_data_pull.yml
conf/base copy/: parameters.yml
data/02_intermediate/: combined_equity_data_moving_averages.csv  preprocessed_companies.pq  preprocessed_shuttles.pq
data/03_primary/: combined_modeling_input.csv  model_input_table.pq
data/05_model_input/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
data/07_model_output/: aggregated_model_results.csv  champion_model_details.csv  detailed_feature_importances.csv  detailed_model_results.csv  feature_importances.csv
docs/source/: conf.py  index.rst
notebooks/: Notebook-forecast-feature-engineering.ipynb  Notebook_Machine-learning.ipynb  Notebook_data-pull.ipynb  Notebook_moving-averages.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/: demo_150_30_splits.py  example_150_30_splits.py  forecasting_example.py  time_series_forecaster.py  time_series_splitting_guide.py  time_series_train_test_generator.py
src/new_stock_classification/: __init__.py  __main__.py  settings.py
src/new_test/: __init__.py  __main__.py  pipeline_registry.py
tests/: test_run.py
(+16 files in other folders)
