[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "new_test"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
new-test = "new_test.__main__:main"

[tool.kedro]
package_name = "new_test"
project_name = "new-test"
kedro_init_version = "0.19.3"
tools = [ "Linting", "Testing", "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/new_test -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "new_test.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
